; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_fast.c_eap_fast_derive_msk.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_fast.c_eap_fast_derive_msk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_fast_data = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eap_fast_data*)* @eap_fast_derive_msk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eap_fast_derive_msk(%struct.eap_fast_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.eap_fast_data*, align 8
  store %struct.eap_fast_data* %0, %struct.eap_fast_data** %3, align 8
  %4 = load %struct.eap_fast_data*, %struct.eap_fast_data** %3, align 8
  %5 = getelementptr inbounds %struct.eap_fast_data, %struct.eap_fast_data* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.eap_fast_data*, %struct.eap_fast_data** %3, align 8
  %8 = getelementptr inbounds %struct.eap_fast_data, %struct.eap_fast_data* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @eap_fast_derive_eap_msk(i32 %6, i32 %9)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %21, label %12

12:                                               ; preds = %1
  %13 = load %struct.eap_fast_data*, %struct.eap_fast_data** %3, align 8
  %14 = getelementptr inbounds %struct.eap_fast_data, %struct.eap_fast_data* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.eap_fast_data*, %struct.eap_fast_data** %3, align 8
  %17 = getelementptr inbounds %struct.eap_fast_data, %struct.eap_fast_data* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i64 @eap_fast_derive_eap_emsk(i32 %15, i32 %18)
  %20 = icmp slt i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %12, %1
  store i32 -1, i32* %2, align 4
  br label %25

22:                                               ; preds = %12
  %23 = load %struct.eap_fast_data*, %struct.eap_fast_data** %3, align 8
  %24 = getelementptr inbounds %struct.eap_fast_data, %struct.eap_fast_data* %23, i32 0, i32 0
  store i32 1, i32* %24, align 4
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %22, %21
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @eap_fast_derive_eap_msk(i32, i32) #1

declare dso_local i64 @eap_fast_derive_eap_emsk(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
